Crisis-rpc#1:去除spring-boot依赖，去除部分spring-boot代码

--- a/demo/view/static/pom.xml
+++ b/demo/view/static/pom.xml
@@ -52,6 +52,14 @@
             <version>${project.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.netflix.eureka</groupId>
+            <artifactId>eureka-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.eureka</groupId>
+            <artifactId>eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -81,5 +89,15 @@
                 </configuration>&ndash;&gt;
             </plugin>
         </plugins>-->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
