--- a/demo/services/adol-impl/src/main/resources/application.yml
+++ b/demo/services/adol-impl/src/main/resources/application.yml
@@ -61,6 +61,8 @@ eureka:
         fetchRegistry: true
         serviceUrl:
             defaultZone: http://192.168.1.156:8080/discovery/eureka/
+        enabled: true
+        a
     instance:
         #beacause of http connect
         non-secure-port:  ${server.port}
