--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
                 <artifactId>maven-install-plugin</artifactId>
                 <version>2.5.2</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-idea-plugin</artifactId>
+                <version>2.2.1</version>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
@@ -189,6 +194,11 @@
                     <configuration>
                         <!-- put your configurations here -->
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-idea-plugin</artifactId>
+                    <version>2.2.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
