--- a/crisis-rpc-demo/web/home/pom.xml
+++ b/crisis-rpc-demo/web/home/pom.xml
@@ -5,28 +5,28 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jeremie.spring</groupId>
-        <artifactId>${app.name}-demo-web</artifactId>
-        <version>${project.version}</version>
+        <artifactId>crisis-rpc-demo-web</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-web-home</artifactId>
-    <version>${project.version}</version>
+    <artifactId>crisis-rpc-demo-web-home</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${app.name}-services-home</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-demo-services-home</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${app.name}-services-adol</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-demo-services-adol</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${app.name}-web-commons</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-demo-web-commons</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
@@ -35,8 +35,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
