--- a/crisis-rpc-demo/web/pom.xml
+++ b/crisis-rpc-demo/web/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jeremie.spring</groupId>
-        <artifactId>${app.name}-demo</artifactId>
-        <version>${project.version}</version>
+        <artifactId>crisis-rpc-demo</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-demo-web</artifactId>
-    <version>${project.version}</version>
+    <artifactId>crisis-rpc-demo-web</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>home</module>
