--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <compilerVersion>1.8</compilerVersion>
+                    <compilerVersion>${java.version}</compilerVersion>
                     <!-- put your configurations here -->
                 </configuration>
             </plugin>
