--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>server</module>
         <module>discovery</module>
         <module>monitor</module>
+        <module>client</module>
     </modules>
 
     <properties>
