--- a/crisis-rpc-demo/services/adol-impl/pom.xml
+++ b/crisis-rpc-demo/services/adol-impl/pom.xml
@@ -24,6 +24,15 @@
             <artifactId>crisis-rpc-demo-services-commons-impl</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-server-mina</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
