--- a/crisis-rpc-demo/services/home-impl/pom.xml
+++ b/crisis-rpc-demo/services/home-impl/pom.xml
@@ -25,6 +25,11 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-server-http</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
