--- a/discovery/discovery-api/pom.xml
+++ b/discovery/discovery-api/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.jeremie.spring</groupId>
-        <artifactId>${app.name}-discovery</artifactId>
-        <version>${project.version}</version>
+        <artifactId>crisis-rpc-discovery</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>${app.name}-discovery-api</artifactId>
-    <version>${project.version}</version>
+    <artifactId>crisis-rpc-discovery-api</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
