--- a/discovery/pom.xml
+++ b/discovery/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jeremie.spring</groupId>
-        <artifactId>${app.name}</artifactId>
-        <version>${project.version}</version>
+        <artifactId>crisis-rpc</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-discovery</artifactId>
-    <version>${project.version}</version>
+    <artifactId>crisis-rpc-discovery</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>discovery-api</module>
