--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>${app.name}</artifactId>
-    <version>${project.version}</version>
+    <artifactId>crisis-rpc</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <groupId>com.jeremie.spring</groupId>
     <packaging>pom</packaging>
 
