--- a/remote/nio/pom.xml
+++ b/remote/nio/pom.xml
@@ -5,19 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jeremie.spring</groupId>
-        <artifactId>${app.name}-remote</artifactId>
-        <version>${project.version}</version>
+        <artifactId>crisis-rpc-remote</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-remote-nio</artifactId>
-    <version>${project.version}</version>
+    <artifactId>crisis-rpc-remote-nio</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${app.name}-remote-api</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-remote-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
