--- a/server/common/pom.xml
+++ b/server/common/pom.xml
@@ -5,18 +5,18 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jeremie.spring</groupId>
-        <artifactId>${app.name}-server</artifactId>
-        <version>${project.version}</version>
+        <artifactId>crisis-rpc-server</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-server-common</artifactId>
-    <version>${project.version}</version>
+    <artifactId>crisis-rpc-server-common</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>com.jeremie.spring</groupId>
-            <artifactId>${app.name}-common</artifactId>
-            <version>${project.version}</version>
+            <artifactId>crisis-rpc-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
