--- a/server/http/pom.xml
+++ b/server/http/pom.xml
@@ -5,24 +5,24 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jeremie.spring</groupId>
-        <artifactId>${app.name}-server</artifactId>
-        <version>${project.version}</version>
+        <artifactId>crisis-rpc-server</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-server-http</artifactId>
-    <version>${project.version}</version>
+    <artifactId>crisis-rpc-server-http</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${app.name}-server-common</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-server-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${app.name}-remote-api</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-remote-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
