Crisis-rpc-team#9:暂时去除eureka依赖，引入zookeeper

--- a/discovery/pom.xml
+++ b/discovery/pom.xml
@@ -14,5 +14,6 @@
     <packaging>pom</packaging>
     <modules>
         <module>discovery-api</module>
+        <module>zookeeper-client</module>
     </modules>
 </project>
