--- a/monitor/sample/src/main/resources/application.yml
+++ b/monitor/sample/src/main/resources/application.yml
@@ -5,13 +5,13 @@ spring:
     application:
         name: monitor-simple
 
-eureka:
-    # these are settings for the client that gets services
-    client:
-        # enable these two settings if you want discovery to work
-        registerWithEureka: true
-        fetchRegistry: true
-        serviceUrl:
-            defaultZone: http://192.168.1.156:8080/discovery/eureka/
-        healthcheck:
-              enabled: true
+#eureka:
+#    # these are settings for the client that gets services
+#    client:
+#        # enable these two settings if you want discovery to work
+#        registerWithEureka: true
+#        fetchRegistry: true
+#        serviceUrl:
+#            defaultZone: http://192.168.1.156:8080/discovery/eureka/
+#        healthcheck:
+#              enabled: true
